# model_compression

./: Dockerfile  README.md  pyproject.toml
src/model_compression/: training.ipynb
src/model_compression/compression/: distillation.py  pruning.py  quantization.py
src/model_compression/training_utils/: datasets.py  metrics.py  modules.py  processors.py  training.py  training_utils.py  utils.py
